--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile("org.robolectric:robolectric:3.1-rc1") {
+    testCompile("org.robolectric:robolectric:3.1") {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
         exclude group: 'com.android.support', module: 'appcompat'
@@ -81,7 +81,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'cardview-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-    testCompile "org.robolectric:shadows-support-v4:3.1-rc1"
+    testCompile "org.robolectric:shadows-support-v4:3.1"
     testCompile 'org.assertj:assertj-core:1.7.1'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.0.0-RC1'
 
